mool/tests/compile/fail/column_type_mismatch.stderr
error[E0277]: the trait bound `Expr<std::string::String>: IntoExpr<i64>` is not satisfied
  --> tests/compile/fail/column_type_mismatch.rs:11:25
   |
11 |     let _ = posts.id.eq(db::val("wrong".to_string()));
   |                      -- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoExpr<i64>` is not implemented for `Expr<std::string::String>`
   |                      |
   |                      required by a bound introduced by this call
   |
   = help: the trait `IntoExpr<i64>` is not implemented for `Expr<std::string::String>`
           but trait `IntoExpr<std::string::String>` is implemented for it
   = help: for that trait implementation, expected `std::string::String`, found `i64`
note: required by a bound in `mool::queries::Column::<T>::eq`
  --> src/queries/handles.rs
   |
   |     pub fn eq<R>(&self, rhs: R) -> Predicate
   |            -- required by a bound in this associated function
   |     where
   |         R: IntoExpr<T>,
   |            ^^^^^^^^^^^ required by this bound in `Column::<T>::eq`
